--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
   },
   "author": "Jerko Steiner",
   "license": "Apache-2.0",
-  "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.13.15",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
@@ -82,6 +81,7 @@
     "redux-thunk": "^2.3.0",
     "regenerator-runtime": "^0.13.7",
     "reselect": "^4.0.0",
+    "resize-observer-polyfill": "^1.5.1",
     "rimraf": "^3.0.2",
     "sass": "^1.32.11",
     "screenfull": "^5.1.0",
